; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_dvo_ns2501.c_ns2501_get_hw_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_dvo_ns2501.c_ns2501_get_hw_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_dvo_device = type { i32 }

@NS2501_REG8 = common dso_local global i32 0, align 4
@NS2501_8_PD = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.intel_dvo_device*)* @ns2501_get_hw_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ns2501_get_hw_state(%struct.intel_dvo_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.intel_dvo_device*, align 8
  %4 = alloca i8, align 1
  store %struct.intel_dvo_device* %0, %struct.intel_dvo_device** %3, align 8
  %5 = load %struct.intel_dvo_device*, %struct.intel_dvo_device** %3, align 8
  %6 = load i32, i32* @NS2501_REG8, align 4
  %7 = call i32 @ns2501_readb(%struct.intel_dvo_device* %5, i32 %6, i8* %4)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

10:                                               ; preds = %1
  %11 = load i8, i8* %4, align 1
  %12 = zext i8 %11 to i32
  %13 = load i8, i8* @NS2501_8_PD, align 1
  %14 = zext i8 %13 to i32
  %15 = and i32 %12, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %19

18:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %17, %9
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @ns2501_readb(%struct.intel_dvo_device*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
